<resources>
    <string name="app_name">Fuel-balance</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Fuel-balance</string>
    <string name="nav_header_subtitle" translatable="false">pavluchkov1501@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools">Настройки</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_send">Написать разработчику</string>
    <string name="string_previous">Предыдущие показания:</string>
    <string name="string_current">Текущие показания:</string>
    <string name="string_trassa">Трасса:</string>
    <string name="string_frequent_technological">Частые технологические остановки:</string>
    <string name="string_time_of_the_year">Норма:</string>
    <string name="string_winter">Зима</string>
    <string name="string_summer">Лето</string>
    <string name="string_spent">Израсходовано:</string>
    <string name="string_spent_result" translatable="false">0.0</string>
    <string name="string_passed">Пройдено, км</string>
    <string name="string_passed_result" translatable="false">0</string>

    <string name="TAG_app_preference_file" translatable="false">by.pavluchkov.fuel_balance.PREFERENCE_FILE_SETTINGS
    </string>
    <string name="TAG_fuel_norma_summer" translatable="false">by.pavluchkov.fuel_balance.FUEL.CONSUMPTION_SUMMER
    </string>
    <string name="TAG_fuel_norma_winter" translatable="false">by.pavluchkov.fuel_balance.FUEL.CONSUMPTION_WINTER
    </string>
    <string name="TAG_frequent_technological_settings" translatable="false">
        by.pavluchkov.fuel_balance.FREQUENT_TECHNOLOGICAL_SETTINGS
    </string>
    <string name="TAG_trassa_settings" translatable="false">by.pavluchkov.fuel_balance.TRASSA_SETTINGS</string>
    <string name="TAG_previous_main" translatable="false">by.pavluchkov.fuel_balance.PREVIOUS_MAIN</string>
    <string name="TAG_current_main" translatable="false">by.pavluchkov.fuel_balance.CURRENT_MAIN</string>
    <string name="TAG_frequent_technological_main" translatable="false">
        by.pavluchkov.fuel_balance.FREQUENT_TECHNOLOGICAL_MAIN
    </string>
    <string name="TAG_trassa_main" translatable="false">by.pavluchkov.fuel_balance.TRASSA_MAIN</string>
    <string name="TAG_time_of_year" translatable="false">by.pavluchkov.fuel_balance.TIMEOFYEAR</string>

    <string name="string_fuel_norma">Норма топлива, л:</string>
    <string name="string_hint_summer">Летняя</string>
    <string name="string_hint_winter">Зимняя</string>
    <string name="string_frequent_technological_settings">Частые технологические (% от нормы):</string>
    <string name="string_trassa_settings">Трасса (% от нормы):</string>

    <!--default value-->
    <string name="string_frequentTechnological_settings_default_value" translatable="false">10</string>
    <string name="string_trassa_settings_default_value" translatable="false">3</string>

    <!--error messages-->

    <string name="string_message_1">Слишком большое значение !</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_home">Дом</string>
    <string name="email_app_address" translatable="false">pavluchkov1501@gmail.com</string>
    <string name="email_app_subject">Обратная связь</string>
    <string name="email_app_chooserTitle">Выберите приложение</string>
    <string name="email_send_error">Нет подходящего приложения</string>
    <string name="string_share_app_chooser_title">Поделиться</string>
    <string name="string_share_app_message">Разрешите поделиться с вами этим приложением:</string>
</resources>
