<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_setting"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/textView_settingTitle"
                android:text="@string/string_fuel_norma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:ellipsize="middle"
                android:maxLines="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_50_procent"
                app:layout_constraintBottom_toBottomOf="@+id/editText_winter_norma_settings"
                app:layout_constraintTop_toTopOf="@+id/editText_summer_norma_settings"/>

        <android.support.constraint.Guideline
                android:id="@+id/guideline_15_procent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15"/>

        <android.support.constraint.Guideline
                android:id="@+id/guideline_50_procent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

        <EditText
                android:id="@+id/editText_summer_norma_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/string_hint_summer"
                android:textAlignment="center"
                android:padding="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_edittext"
                android:textColor="@color/colorMainText"
                android:ems="10"
                app:layout_constraintStart_toStartOf="@+id/guideline_50_procent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_15_procent"/>

        <EditText
                android:id="@+id/editText_winter_norma_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/string_hint_winter"
                android:textAlignment="center"
                android:padding="8dp"
                android:background="@drawable/background_edittext"
                android:textColor="@color/colorMainText"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_summer_norma_settings"
                app:layout_constraintStart_toStartOf="@+id/guideline_50_procent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/textView_frequent_technological_settings"
                android:text="@string/string_frequent_technological_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:singleLine="true"
                android:ellipsize="middle"
                android:maxLines="2"
                app:layout_constraintTop_toBottomOf="@+id/editText_winter_norma_settings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_50_procent"/>

        <TextView
                android:id="@+id/textView_trassa_settings"
                android:text="@string/string_trassa_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:singleLine="true"
                android:ellipsize="middle"
                android:maxLines="2"
                app:layout_constraintTop_toBottomOf="@+id/textView_frequent_technological_settings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_50_procent"/>

        <EditText
                android:id="@+id/editText_frequent_technological_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:textColor="@color/colorMainText"
                android:background="@drawable/background_edittext"
                android:textAlignment="center"
                android:padding="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline_50_procent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView_frequent_technological_settings"
                app:layout_constraintBottom_toBottomOf="@+id/textView_frequent_technological_settings"/>

        <EditText
                android:id="@+id/editText_trassa_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@drawable/background_edittext"
                android:textColor="@color/colorMainText"
                android:textAlignment="center"
                android:padding="8dp"
                android:ems="10"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView_trassa_settings"
                app:layout_constraintTop_toTopOf="@+id/textView_trassa_settings"
                app:layout_constraintStart_toStartOf="@+id/guideline_50_procent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>